--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,14 @@
 $bluegrey: black;
 
-pre {
-  padding: 20px;
-  color: $bluegrey;
-  text-shadow: 0 1px 1px rgba(#000, .5);
+body {
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+.title {
+  width: 100%;
+  text-align: center;
+  color: white;
+  position: absolute;
 }
