--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@ body {
   position: relative;
   margin: 0;
   padding: 0;
+
 }
 
 .title {
@@ -11,4 +12,5 @@ body {
   text-align: center;
   color: white;
   position: absolute;
+  pointer-events:none;
 }
